--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   "devDependencies": {
     "@prisma/extension-optimize": "^1.0.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.16.11",
+    "@types/node": "20.19.10",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@xpd/tailwind-3dtransforms": "^1.0.3",
@@ -86,7 +86,7 @@
     "prettier": "^3.4.2",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
