--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "postinstall": "prisma generate",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "prisma": {
-    "schema": "prisma/schema.prisma"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.0",
