--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "input-otp": "^1.4.2",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.447.0",
-    "next": "^15.1.3",
+    "next": "^15.1.9",
     "next-auth": "^5.0.0-beta.22",
     "next-themes": "^0.4.3",
-    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react": "19.0.1",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react-dom": "19.0.1",
     "react-hook-form": "^7.53.0",
     "react-image-crop": "^11.0.10",
     "react-intersection-observer": "^9.14.1",
