--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "embla-carousel-auto-scroll": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "express": "^4.21.1",
+    "formidable": "^3.5.4",
     "framer-motion": "^11.11.11",
     "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
@@ -76,6 +77,7 @@
   "devDependencies": {
     "@prisma/extension-optimize": "^1.0.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.7",
     "@types/node": "20.19.10",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
