--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+node_modules/
+.next/
+dist/
+build/
+coverage/
+.DS_Store
+.env
+.env.*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.vscode/
+.idea/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.parcel-cache
+/.turbo
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
